@@ -358,16 +358,11 @@ public class DelimitedTextFile {
 
     @Override
     public Tuple next() throws IOException {
+      VTuple tuple;
 
       if (!reader.isReadable()) {
         return null;
       }
-
-      if (targets.length == 0) {
-        return EmptyTuple.get();
-      }
-
-      VTuple tuple = new VTuple(schema.size());
 
       try {
 
@@ -375,12 +370,22 @@ public class DelimitedTextFile {
         do {
 
           ByteBuf buf = reader.readLine();
+
+          // if no more line, then return EOT (end of tuple)
           if (buf == null) {
             return null;
           }
 
-          try {
+          // If there is no required column, we just read each line
+          // and then return an empty tuple without parsing line.
+          if (targets.length == 0) {
+            recordCount++;
+            return EmptyTuple.get();
+          }
 
+          tuple = new VTuple(schema.size());
+
+          try {
             deserializer.deserialize(buf, tuple);
             // if a line is read normaly, it exists this loop.
             break;
